adding employee-service

--- a/employee-service/build.gradle
+++ b/employee-service/build.gradle
@@ -18,9 +18,11 @@ ext {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
