adding department-service

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'sample-spring-microservice-new'
 include ':discovery-service'
 include ':config-service'
 include ':employee-service'
+include ':department-service'
