adding department-service, organization-service, gateway-service

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ include ':discovery-service'
 include ':config-service'
 include ':employee-service'
 include ':department-service'
+include ':organization-service'
+include ':gateway-service'
