adding proxy-service

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':employee-service'
 include ':department-service'
 include ':organization-service'
 include ':gateway-service'
+include ':proxy-service'
